配置，启动